manifests/node-hostname/base/node-hostname-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: node-deploy
  name: node-hostname
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 60
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: node-deploy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-deploy
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - node-deploy
              topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: node-hostname
          env: [ ]
          envFrom: [ ]
          image: europe-north1-docker.pkg.dev/default-418011/docker-repo/node-hostname:latest # "latest" is never used
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
#            limits:
#              cpu: 1000m
#              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
          volumeMounts: [ ]
      imagePullSecrets:
        - name: artifact-registry-reader
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes: [ ]
