manifests/node-hostname/base/node-hostname-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: node-hostname
  name: node-hostname
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: node-hostname
  type: ClusterIP
