manifests/node-hostname/base/node-hostname-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hostname
  labels:
    app.kubernetes.io/name: node-hostname
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: node-hostname.ce-k.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-hostname
                port:
                  name: http
  tls:
    - hosts:
        - node-hostname.ce-k.se
      secretName: node-hostname-tls
